update path
